# mentordashboard-cios

./: .gitignore  CHANGELOG.md  CLAUDE.md  INSTRUCTIES.md  TESTPLAN.md  TODOS.md  app.js  index.html  index.html.bak  package-lock.json  package.json  skills-lock.json  start.bat  tsconfig.json  tsconfig.migrated.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.gsd/: DECISIONS.md  KNOWLEDGE.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v2.2-MILESTONE-AUDIT.md
docs/: index.html
parsers/: excel.js  excel.ts  pdf-enrich.ts  pdf-status.ts  pdf.js  pdf.ts
scripts/: extract-changelog-entry.mjs  qa-debug.mjs  qa-debug2.mjs  qa-m36.mjs  qa-screenshot.mjs  update-landing-page.mjs
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  lib.rs
tests/: BpvProgressSection.test.tsx  DoortstroomPrognoseSection.test.tsx  FeedbackModal.test.tsx  HelpPage.test.tsx  ImportPage.test.tsx  KeuzedeelSection.test.tsx  KlasTabStrip.test.tsx  KlasVerwijderenModal.test.tsx  LeerlingTegel.test.tsx  RekenenNederlandsSection.test.tsx  SettingsPage.gevarenzone.test.tsx  SettingsPage.test.tsx  UpdateModal.test.tsx  actiepunten.test.js  aggregation.test.ts  backup.test.ts  bpv.test.ts  datapuntStatus.test.ts  deelgebieden.test.ts  enrichByProximity.test.ts  excel.test.ts  feedback.test.ts  (+21 more)
(+439 files in other folders)
