[package]
name = "tauri-app"
version = "0.1.0"
description = "Mentordashboard CIOS — voortgang en verzuim in één oogopslag"
authors = ["CIOS Zuidwest"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"                    # Phase 12: durable key-value persistence
tauri-plugin-secure-storage = "1"          # Phase 12: OS keychain (Windows Credential Manager)
aes-gcm = "0.10.3"                         # Phase 12: AES-256-GCM (stable; NOT 0.11-rc)
base64 = "0.22"                            # Phase 12: nonce+ciphertext wire format encoding
serde = { version = "1", features = ["derive"] }
serde_json = "1"

